--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ time, mark, audio, video {
   border: 0;
   font-size: 100%;
   vertical-align: baseline;
+  box-sizing: border-box;
 }
 
 article, aside, details, figcaption, figure,
@@ -34,6 +35,7 @@ footer, header, hgroup, main, menu, nav, section {
 body {
   line-height: 1;
   overflow-X: hidden;
+  overflow-Y: hidden;
 }
 
 ol, ul {
@@ -55,6 +57,8 @@ table {
   border-spacing: 0;
 }
 
+
+
 /* ------------------------------
 font-family
 ---------------------------------*/
@@ -68,20 +72,31 @@ font-family
   ここに背景画像を設置
 } */
 
+.container {
+  width: 100%;
+  height: 100vh;
+  margin: 0 auto;
+  max-width: 576px;
+  position: relative;
+  /* ここのposi:relaではtopicの範囲を決めるためにある */
+  background-color: #000;
+}
+
 .topic {
   width: 180px;
   position: absolute;
   top: 200px;
   left: 40px;
+  /* topicを範囲を指定 */
   text-align: center;
-  border: 1px solid #212121;
+  border: 1px solid #fff;
+  background-color: #fff;
   padding: 1em;
 }
 
 .msg-picup {
   animation: 1s 1 normal fadeout;
   animation-fill-mode: forwards;
-  /* 移動してから消えるのなんで */
 }
 
 @keyframes fadeout {
@@ -99,25 +114,24 @@ font-family
   animation-fill-mode: forwards;
 }
 
-.slideUP {
-  /*position:fixed;にし、z-indexの数値を大きくして前面へ*/
-  position:fixed;
-  z-index: 999;
-  bottom:-120%;
-  /* bottom:0%; */
-  left:0;
-  width:100%;
-  /* 横幅を狭めて真ん中寄せにしたい */
-  height: 100vh;/*ナビの高さ*/
-  background:#999;
-  /*動き*/
-  animation: slideUp 1s forwards;
+#modal {
+  height: 100vh;
 }
 
-/* .kore  {
-  bottom: 0
-} */
+.slideUP {
+  width: 88%;
+  /* max-width: 576pxを継承 */
+  height: 100%;
+  /* bottom: 0;
+  left: 0; */
+  margin: 0 auto;
+  padding: 16px;
+  background: lightblue;
+  border-radius:4px 4px 0 0 ;
+  z-index: 1;
+  animation: slideUp 1s forwards;
 
+}
 
 /* .slideUp {
   animation: slideUp .5s ease-in-out forwards;
@@ -129,12 +143,11 @@ font-family
 /* 下から上 */
 @keyframes slideUp {
   0% {
-    opacity: 0;
-    transform: translateY(-1%);
+    transform: translateY(120%);
   }
   100% {
-    opacity: 1;
-    transform: translateY(-80%);
+    /* opacity: 1; */
+    transform: translateY(8%);
   }
 }
 
@@ -151,11 +164,11 @@ font-family
 }
 
 /* 下からできたwindowの右端にばつ印を書きたい */
-.slideUp.js-closeBtn  {
+/* .slideUp.js-closeBtn  {
   display: block;
   position: relative;
   width: 30px;
   height: 30px;
-  border: 2px solid red; /* 枠の調整 */
-  background: darkolivegreen; /* ボタンの背景色 */
-}
+  border: 2px solid red; 
+  background: darkolivegreen; 
+} */
