--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ footer, header, hgroup, main, menu, nav, section {
 }
 
 body {
-  line-height: 1;
+  line-height: 1.5;
   overflow-X: hidden;
   overflow-Y: hidden;
 }
@@ -71,11 +71,36 @@ font-family
 
 .bgi{
   background-image: url(../imagas/unn.JPG);
+  background-size: cover;
+  /* background-image: 100%; */
+  /* background-repeat: no-repeat; */
+  /* object-fit: cover; */
+}
+
+.bgi-morning {
+  background-image: url(../images/moni.png);
   /* background-image: 100%; */
   /* background-repeat: no-repeat; */
   background-size: cover;
   /* object-fit: cover; */
 }
+
+.bgi-noon {
+  background-image: url(../images/noon.png);
+  /* background-image: 100%; */
+  /* background-repeat: no-repeat; */
+  background-size: cover;
+  /* object-fit: cover; */
+}
+
+.bgi-night {
+  background-image: url(../images/night.png);
+  /* background-image: 100%; */
+  /* background-repeat: no-repeat; */
+  background-size: cover;
+  /* object-fit: cover; */
+}
+
 
 .container {
   width: 100%;
@@ -133,7 +158,7 @@ font-family
 
 .msg-picup {
   /* topicがクリックされたらこれをつけてtopicを消している */
-  animation: 1s 1 normal fadeout;
+  animation: .8s 1 normal fadeout;
   animation-fill-mode: forwards;
 }
 
@@ -191,13 +216,13 @@ font-family
   width: 100%;
   max-width: 380px;
   text-align: center;
-  border: 1px solid #333;
-  background-color: #fff;
-  padding: 2.5em;
+  color: #fff;
+  background-color: #696868;
+  padding: 3.8em;
 }
 
 .wrapper .content {
-  margin: 2em auto;
+  margin: 3.8em auto;
 }
 
 .slideUp {
@@ -239,6 +264,11 @@ font-family
   right: 8px;
   cursor:pointer;
   margin: 1em;
+  text-decoration: underline;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  
 }
 
 /* 別件 */
